fix flex alignment

--- a/src/css/_gallery_item.scss
+++ b/src/css/_gallery_item.scss
@@ -14,8 +14,8 @@
     visibility: hidden;
     position: absolute;
     display: flex;
-    align-items: start;
-    justify-content: end;
+    align-items: flex-start;
+    justify-content: flex-end;
     top: 0;
     width: 100%;
     height: 100%;
