--- a/src/css/_toolbar.scss
+++ b/src/css/_toolbar.scss
@@ -1,8 +1,8 @@
 .toolbar {
   display: flex;
   flex-wrap: wrap;
-  justify-content: end;
-  align-items: end;
+  justify-content: flex-end;
+  align-items: flex-end;
   margin: 1em;
 
   @media (max-width: 767.99px) {
